# Qubitly

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
notebooks/: benchmarking.ipynb  integration.ipynb
src/Qubitly/: __init__.py  circuits.py  examples.py  gates.py  states.py
tests/: test_helpers.py  test_integration.py
