[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Qubitly"
version = "0.1.0"
description = "A lightweight quantum computer simulator"
authors = [
    { name="Matteo Ilardi", email="matteo.ilardi@studenti.unimi.it" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "jax",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]
